Fix double scrollbars on Chromium-based browsers, better menu for mobile

--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@
 html,
 body {
     width: 100%;
-    height: 100%;
     margin: 0;
     padding: 0;
     font-family: 'Roboto', serif;
@@ -175,16 +174,17 @@ img {
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    width: 355px;
+    width: 375px;
     position: fixed;
     top: 0;
     left: 0;
-    margin: 10px;
-    height: calc(100% - 20px);
+    padding: 10px;
+    height: 100%;
     overflow: visible;
     z-index: 9999;
     opacity: 1;
     transition: all .2s;
+    backdrop-filter: blur(25px);
 }
 
 #sidebar > div:first-child {
@@ -630,6 +630,8 @@ li>a:hover {
     #sidebar {
         visibility: hidden;
         opacity: 0;
+        width: 100%;
+        background-color: rgba(0, 0, 0, 0.2);
     }
 
     .fixed-top-btn-container {
